--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header {
 }
 
 /* nav */
-.menu-food article .link-food h2, section #bolde, main h1, nav #menu h2 {
+.menu-food article .link-food p, .menu-food article .link-food h2, .menu-food article .link-food span, section #bolde, main h1, nav #menu h2 {
   font-family: "Roboto", sans-serif;
 }
 
@@ -116,35 +116,6 @@ main a {
 }
 
 /* Section1 */
-#spinner {
-  height: 50vh;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#spinner circle {
-  fill: none;
-  stroke: #FF79DA;
-  stroke-width: 10px;
-  stroke-dasharray: 100 100;
-  stroke-dashoffset: 70;
-  animation: rotation 2000ms ease-in-out alternate infinite;
-}
-@keyframes rotation {
-  0% {
-    stroke-dasharray: 100 100;
-    stroke-dashoffset: 70;
-    stroke: #FF79DA;
-  }
-  100% {
-    stroke-dasharray: 20 20;
-    stroke-dashoffset: -600;
-    stroke: #9356DC;
-  }
-}
-
-/* Section2 */
 section {
   background-color: #f6f8f8;
   padding-bottom: 35px;
@@ -240,6 +211,38 @@ section .menu-resto a img {
   background-size: cover;
 }
 
+/* Section2  (spineer)*/
+#spinner {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#spinner circle {
+  fill: none;
+  stroke: #FF79DA;
+  stroke-width: 10px;
+  stroke-dasharray: 100 100;
+  stroke-dashoffset: 70;
+  opacity: 0;
+  animation-duration: 3s;
+  animation: rotation 2000ms ease-in-out alternate;
+}
+@keyframes rotation {
+  0% {
+    stroke-dasharray: 100 100;
+    stroke-dashoffset: 70;
+    stroke: #FF79DA;
+    opacity: 1;
+  }
+  100% {
+    stroke-dasharray: 20 20;
+    stroke-dashoffset: -600;
+    stroke: #9356DC;
+    opacity: 1;
+  }
+}
+
 /* manu-food */
 .menu-food {
   border: 0px black solid;
@@ -302,19 +305,19 @@ nav img {
   display: flex;
   justify-content: space-between;
   border-radius: 15px;
-  height: 80px;
+  height: 70px;
   width: 500px;
   margin-left: 100px;
   padding-left: 10px;
   margin-bottom: 30px;
   background-color: white;
   cursor: pointer;
-  animation-name: transition;
-  animation-delay: 250ms;
   animation-duration: 2s;
   animation-fill-mode: forwards;
-  animation-direction: alternate;
-  animation-timing-function: cubic-bezier(0.13, 0, 1, 0.24);
+  animation: transition 250ms cubic-bezier(0.13, 0, 1, 0.24) alternate;
+}
+.menu-food article .link-food .menus {
+  position: relative;
 }
 @media all and (max-width: 768px) {
   .menu-food article .link-food {
@@ -328,7 +331,7 @@ nav img {
 .menu-food article .link-food:hover span {
   position: absolute;
   animation-delay: -5s;
-  transform: translateX(-65px) rotate(360deg);
+  transform: translateX(-50px) translateY(15px);
 }
 .menu-food article .link-food:hover p {
   width: 180px;
@@ -360,24 +363,25 @@ nav img {
   left: 280px;
   bottom: 30px;
   font-weight: bolder;
-  font-family: "Roboto Slab", serif;
 }
 .menu-food article .link-food h2 {
   font-size: 15px;
   overflow: visible;
 }
 .menu-food article .link-food p {
-  font-size: 13px;
+  font-size: 12px;
   overflow: visible;
+  opacity: 0.7;
 }
 .menu-food article .link-food .fas {
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   background-color: #99E2D0;
-  width: 60px;
-  height: 60px;
+  width: 35px;
+  height: 40px;
   padding-left: 30px;
   padding-top: 30px;
   color: white;
-  font-size: 30px;
   opacity: 0;
 }
 .menu-food article .link-food .fas:active {
@@ -398,6 +402,15 @@ footer {
   color: white;
   padding-top: 15px;
   padding-bottom: 30px;
+  animation: translate 10s ease-in-out both;
+}
+@keyframes translate {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-180px);
+  }
 }
 footer h1 {
   font-family: "Shrikhand", cursive;
