--- a/style.scss
+++ b/style.scss
@@ -131,36 +131,6 @@ main{
 
 }
           /* Section1 */
-#spinner{
-    height:50vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;       
-      circle{
-            fill: none;
-            stroke: $secondColor;
-            stroke-width:10px ;
-            stroke-dasharray:100 100;
-            stroke-dashoffset: 70;
-            animation: rotation 2000ms ease-in-out alternate infinite;
-        }
-    
-    @keyframes rotation{
-        0%{
-            stroke-dasharray: 100 100;
-            stroke-dashoffset: 70;
-            stroke: $secondColor;
-        }
-        100%{
-            stroke-dasharray:20 20;
-            stroke-dashoffset:-600;
-            stroke: $primaryColor;
-        }
-    }
-    
-}
-          /* Section2 */
 section{
    background-color: rgb(246, 248, 248);
    padding-bottom: 35px;
@@ -261,6 +231,40 @@ section{
    }
 }      
 }
+         /* Section2  (spineer)*/
+         #spinner{
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           
+              circle{
+                    fill: none;
+                    stroke: $secondColor;
+                    stroke-width:10px ;
+                    stroke-dasharray:100 100;
+                    stroke-dashoffset: 70;
+                    opacity: 0;
+                    animation-duration: 3s;
+                    animation: rotation 2000ms ease-in-out alternate;
+                }
+            
+            @keyframes rotation{
+                0%{
+                    stroke-dasharray: 100 100;
+                    stroke-dashoffset: 70;
+                    stroke: $secondColor;
+                    opacity: 1;
+                }
+                100%{
+                    stroke-dasharray:20 20;
+                    stroke-dashoffset:-600;
+                    stroke: $primaryColor;
+                    opacity: 1;
+                }
+            }
+            
+        }
 
           /* manu-food */
 %radius{
@@ -325,23 +329,23 @@ nav{
             animation-duration: 1s;
         }
          .link-food{
-             display: flex;
-             justify-content: space-between;
+            display: flex;
+            justify-content: space-between;
             @extend%border;
             border-radius: 15px;
-            height: 80px;
+            height: 70px;
             width: 500px;
             margin-left: 100px;
             padding-left:10px;
             margin-bottom: 30px;
             background-color: white;
             cursor: pointer;
-            animation-name: transition;
-            animation-delay: 250ms;
             animation-duration: 2s;
             animation-fill-mode: forwards;
-            animation-direction: alternate;
-            animation-timing-function: cubic-bezier(.13,0,1,.24);
+            animation: transition 250ms cubic-bezier(.13,0,1,.24) alternate;
+            .menus{
+                position: relative;   
+            }
             @media all and (max-width:768px){
                 width: auto;
                 margin: 30px 5px;
@@ -354,25 +358,22 @@ nav{
                 & span{
                     position: absolute;
                     animation-delay: -5s;
-                    transform: translateX(-65px) rotate(360deg);
+                    transform: translateX(-50px) translateY(15px) ;
                 }
                 & p{
                         width: 180px;
                         text-overflow: ellipsis;
                         white-space: nowrap;
-                        overflow: hidden
-                    
+                        overflow: hidden    
                 }
                 & h2{
                     width: 200px;
                     text-overflow: ellipsis;
                     white-space: nowrap;
-                    overflow: hidden
-                
+                    overflow: hidden    
             }
                 
             }
-            
                 @keyframes transition {
                     0%{
                       opacity: 0;
@@ -384,15 +385,14 @@ nav{
                 }
             a{
                 text-decoration: none;
-                color: black;
-                 
+                color: black;       
             }
             span{
-                position: relative;
-                left: 280px;
-                bottom: 30px;
-                font-weight: bolder;
-                font-family: 'Roboto Slab', serif;
+               position: relative;
+               left: 280px;
+               bottom: 30px;
+               font-weight: bolder;
+               @extend %family;
             }
              h2{
                 font-size: 15px;
@@ -400,31 +400,29 @@ nav{
                 overflow: visible;
             }
             p{
-                font-size: 13px;
+                font-size: 12px;
                 overflow: visible; 
-               
+                @extend %family;
+                opacity: 0.7;   
             }
             .fas{
                 @extend%border;
+                border-top-right-radius: 15px;
+                border-bottom-right-radius: 15px;
                 background-color:$tertiaireColor;
-                width: 60px;
-                height: 60px;
+                width: 35px;
+                height: 40px;
                 padding-left: 30px;
                 padding-top: 30px;
                 color: white;
-                font-size: 30px;
                 opacity: 0;
-                
-          
                &:active{
                    opacity: 1;
                    animation-fill-mode: both;
                    animation-delay: 1s;
-                   animation-duration: 1s;
-                   
+                   animation-duration: 1s;     
                }
-            }
-           
+            }    
          }
      }
 }
@@ -442,6 +440,11 @@ footer{
     color: white;
     padding-top: 15px;
     padding-bottom: 30px;
+    animation: translate 10s ease-in-out both; 
+    @keyframes translate {
+        from{ transform: translateY(0px);}
+        to{transform: translateY(-180px);}    
+    } 
   h1{
     font-family: 'Shrikhand', cursive;
     padding-left: 25px;
