--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ main .link {
   display: flex;
   border-radius: 15px;
   margin: 20px;
-  padding: auto, 5px;
+  padding-right: 5px;
+  padding-left: 5px;
   height: 70px;
   background-color: #f7f5f5;
 }
@@ -96,7 +97,7 @@ main .link .fas {
   color: grey;
   font-size: 20px;
   padding-top: 20px;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 main .link .fas:hover {
   color: #9356DC;
@@ -118,7 +119,7 @@ main .link span {
 main a {
   text-decoration: none;
   color: black;
-  padding-right: 10px;
+  padding-right: 5px;
 }
 
 /* Section1 (4 menu au page d'acceuil)*/
@@ -173,9 +174,7 @@ section .menu-resto .bloc .coeur .fas:active {
   background: -webkit-linear-gradient(0deg, #FF79DA, #9356DC);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  transform: translatez(-50%, 50%) rotate(90deg);
-  animation: slide-top 1s ease-in;
-  animation-name: color-coeur 1s forwards;
+  animation-name: color-coeur 1s ease-in both;
 }
 @keyframes color-coeur {
   0% {
@@ -257,7 +256,7 @@ section .menu-resto a img {
   }
 }
 
-/* manu-food */
+/* menu-food */
 nav img {
   width: 350px;
   height: 250px;
