--- a/style.scss
+++ b/style.scss
@@ -89,8 +89,9 @@ main{
                display: flex;
                @extend %border;
                border-radius: 15px;
-               margin: 20px ;
-               padding:auto, 5px;
+               margin: 20px;
+               padding-right:5px;
+               padding-left: 5px;
                height: 70px;
                background-color: rgb(247, 245, 245);
                &:hover{
@@ -100,7 +101,7 @@ main{
                    color: grey;
                    font-size: 20px;
                    padding-top:20px;
-                   padding-right: 20px;
+                   padding-right: 10px;
                    &:hover{
                        color: $primaryColor;
                    }
@@ -123,7 +124,7 @@ main{
         a{
             text-decoration: none;
             color: black;
-            padding-right: 10px;    
+            padding-right: 5px;    
         }
 }
           /* Section1 (4 menu au page d'acceuil)*/
@@ -176,9 +177,7 @@ section{
                   background:-webkit-linear-gradient(0deg,$secondColor,$primaryColor);
                   -webkit-background-clip: text;
                   -webkit-text-fill-color:transparent; 
-                  transform: translatez(-50%,50%) rotate(90deg);
-                  animation: slide-top 1s ease-in;
-                  animation-name: color-coeur 1s forwards;
+                  animation-name: color-coeur 1s ease-in both;
                   @keyframes color-coeur {
                       0%{
                           opacity: 0;
@@ -188,9 +187,7 @@ section{
                       }
                   }
               } 
-      
-          }
-          
+          }   
       }
     .plats{
         padding: 10px;
@@ -266,7 +263,7 @@ section{
             }
         }          
 }
-          /* manu-food */
+          /* menu-food */
 nav{
     img{
         width: 350px;
@@ -329,7 +326,8 @@ nav{
             cursor: pointer;
             animation-duration: 2s;
             animation: transition 250ms cubic-bezier(.13,0,1,.24) alternate forwards;
-           /* animation d'apparaître progressivement */
+          
+            /* animation d'apparaître progressivement */
         @keyframes transition {
                 0%{
                   opacity: 0;
