--- a/style.css
+++ b/style.css
@@ -176,9 +176,9 @@ section .menu-resto .bloc .coeur .fas:active {
   background: -webkit-linear-gradient(0deg, #FF79DA, #9356DC);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation-name: color-coeur 1s ease-in both;
+  animation-name: couleur 100ms ease-in both;
 }
-@keyframes color-coeur {
+@keyframes couleur {
   0% {
     opacity: 0;
   }
