--- a/style.scss
+++ b/style.scss
@@ -180,7 +180,7 @@ section{
                   background:-webkit-linear-gradient(0deg,$secondColor,$primaryColor);
                   -webkit-background-clip: text;
                   -webkit-text-fill-color:transparent; 
-                  animation-name: couleur 100ms ease-in both;
+                  animation: couleur 100ms ease-in both;
                   @keyframes couleur {
                       0%{
                           opacity: 0;
