--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.menu-food article .link-food p, .menu-food article .link-food h2, .menu-food article .link-food span, section .menu-resto .bloc .plats h2, section #bolde, main a, main h1, nav #menu h2 {
+.menu-food article .link-food p, .menu-food article .link-food h2, .menu-food article .link-food span, section .menu-resto .bloc .plats h2, section #bolde, main a, main h1, nav #menu P, nav #menu h2 {
   font-family: "Roboto", sans-serif;
 }
 
@@ -10,7 +10,7 @@
   color: white;
 }
 
-.menu-food article .link-food .fas, .menu-food article .link-food, .menu-food .btn button, section .menu-resto, main .link, nav #menu .btn {
+.menu-food article .link-food .cercle, .menu-food article .link-food, .menu-food .btn button, section .menu-resto, main .link, nav #menu .btn {
   border: 0px black solid;
   -webkit-box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
   -moz-box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
@@ -207,7 +207,7 @@ section .menu-resto a {
   /* image de menu */
 }
 section .menu-resto a h3 {
-  color: #0d8869;
+  color: #28a183;
   background-color: #99E2D0;
   border: 0px black solid;
   width: 90px;
@@ -359,12 +359,23 @@ nav img {
   /* décalage de prix au survole  */
   /* animation de ... au survole si la phrase est longue */
 }
-.menu-food article .link-food:hover .fas {
-  opacity: 0.1;
+.menu-food article .link-food:hover .cercle {
+  opacity: 1;
+  transform: scaleX(1);
+}
+.menu-food article .link-food:hover .cercle i {
+  animation: rotation 300ms ease-in 0.5s alternate;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 .menu-food article .link-food:hover span {
   position: absolute;
-  animation-delay: -5s;
   transform: translateX(-40px) translateY(15px);
 }
 .menu-food article .link-food:hover p {
@@ -398,23 +409,31 @@ nav img {
   overflow: visible;
   opacity: 0.7;
 }
-.menu-food article .link-food .fas {
+.menu-food article .link-food .cercle {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #99E2D0;
+  background-color: #28a183;
   width: 35px;
   height: 40px;
   padding-left: 20px;
   padding-top: 30px;
-  font-size: 20px;
-  color: white;
   opacity: 0;
+  position: relative;
+  transform: translateX(50px);
+  transform-origin: top right;
+  transform: scaleX(0);
+  transition: all 0.5s linear;
 }
-.menu-food article .link-food .fas:active {
-  opacity: 1;
+.menu-food article .link-food .cercle:active {
+  opacity: 0.6;
   animation-fill-mode: both;
   animation-delay: 1s;
   animation-duration: 1s;
+}
+.menu-food article .link-food .cercle i {
+  font-size: 20px;
+  color: white;
+  padding-bottom: 5px;
 }
 
 /* footer */
